# knowbridge

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  knowbridge.desktop.cmake  knowbridge.notifyrc
.github/workflows/: build-in-docker.yml  docker-image.yml
assets/: knowbridge.desktop.cmake  knowbridge.notifyrc
po/: CMakeLists.txt
po/ru/: knowbridge.po
src/: AccessibilityHelper.cpp  AccessibilityHelper.h  ActionEditorDialog.cpp  ActionEditorDialog.h  ApiClient.cpp  ApiClient.h  BackgroundProcessor.cpp  BackgroundProcessor.h  ConfigManager.cpp  ConfigManager.h  SettingsDialog.cpp  SettingsDialog.h  TextAction.h  main.cpp
tools/: collect_all_src.sh
